Add old website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>Daniel Floryan</title>
+    <meta name="description" content="I am a Mechanical & Aerospace Engineering PhD student interested in fluid dynamics and control theory.">
+    <meta name="keywords" content="daniel floryan, daniel, mechanical engineering, aerospace engineering, phd, princeton, cornell, grad school">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="css/tufte.css"/>
+    <link rel="stylesheet" href="css/latex.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+
+  <body>
+    <article>
+      <h1 id="tufte-css">Daniel Floryan</h1>
+      <p class="subtitle"><a href="./index.html">Home</a>, <a href="./about.html">research</a>, <a href="./cv/dfloryanCV.pdf">CV</a>, <a href="./publications.html">publications</a></p>
+      <section>
+        <h2 id="welcome">Welcome</h2>
+        <p>I am a postdoctoral research associate at the University of Wisconsin-Madison studying fluid mechanics. Previously, I earned my Ph. D. from Princeton University. Read more <a href="./about.html">about me</a>, view <a href="cv/dfloryanCV.pdf">my CV</a>, and <a id="mail" href="mailto:dfloryan@alumni.princeton.edu?subject=Inquiry">get in touch</a> if you want to discuss an idea.</p>
+      </section>
+
+    </article>
+  </body>
+</html>
