--- a/index.html
+++ b/index.html
@@ -47,17 +47,14 @@
     </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active"> <img src="images/slider/animals2.png" alt="Chania">
-        <div class="carousel-caption">
-          <h3><span style="background-color: rgba(255,255,255,0.7)">Fluid Mechanics + Nonlinear Dynamics</span></h3>
-          <h4><span style="background-color: rgba(255,255,255,0.7)">Fluid mechanics with a nonlinear dynamics perspective</span></h4>
-        </div>
+      <div class="item active"> <img src="images/slider/animation.gif" alt="Chania">
+
       </div>
-      <div class="item"> <img src="images/slider/piv.jpg" alt="Chania">
-        <div class="carousel-caption">
-            <h3><span style="background-color: rgba(255,255,255,0.7)">Experiments + Computations</span></h3>
-            <h4><span style="background-color: rgba(255,255,255,0.7)">Targeted experiments and simulations</span></h4>
-        </div>
+      <div class="item"> <img src="images/slider/animals2.png" alt="Chania">
+          <div class="carousel-caption">
+              <h3><span style="background-color: rgba(255,255,255,0.7)">Fluid Mechanics + Nonlinear Dynamics</span></h3>
+              <h4><span style="background-color: rgba(255,255,255,0.7)">Fluid mechanics with a nonlinear dynamics perspective</span></h4>
+          </div>
       </div>
     </div>
     <!-- Controls --> 
