--- a/publications/van2020turbulent.html
+++ b/publications/van2020turbulent.html
@@ -45,14 +45,13 @@
     <div class="row">
       <div class="col-md-4 work-detail-margin detail-image">
         <div class="work-image">
-          <p> <img src="./images/hossain2012drag.png"></p>
+          <p> <img src="./images/van2020turbulent.png"></p>
         </div>
       </div>
       <div class="col-md-6 work-detail-margin detail-contentbox">
         <div class="detail-content">
-          <h4>Drag reduction due to spatial thermal modulations</h4>
-          <p>M. Z. Hossain, D. Floryan, and J. M. Floryan, Journal of Fluid Mechanics (2012), 713, 398&ndash;419</p>
-          <p>doi: <a href="https://doi.org/10.1017/jfm.2012.465">10.1017/jfm.2012.465</a></p>
+          <h4>Turbulent pipe flow response to a step change in surface roughness</h4>
+          <p>T. Van Buren, D. Floryan, L. Ding, L. H. O. Hellstrom, and A. J. Smits, under review</p>
         </div>
       </div>
     </div>
@@ -60,9 +59,9 @@
     <div class="row">
         <div class="col-md-10">
             <h4>Quickly:</h4>
-                <p>Heating the wall of a channel with a special pattern creates separation bubbles, coloured by sense of rotation, that separate the main stream (in white) from the wall. Drag reduction of up to 87% compared to an unheated wall can be achieved.</p>
+                <p>Spatial dependence of turbulent flow following a change in surface roughness.</p>
                 <h4><br>Abstract:</h4>
-                <p>It is demonstrated that a significant drag reduction for pressure-driven flows can be realized by applying spatially distributed heating. The heating creates separation bubbles that separate the stream from the bounding walls and, at the same time, alter the distribution of the Reynolds stress, thereby providing a propulsive force. The strength of this effect is of practical interest for heating with wavenumbers &alpha; = O(1) and for flows with small Reynolds numbers and, thus, it is of potential interest for applications in micro-channels. Explicit results given for a very simple sinusoidal heating demonstrate that the drag-reducing effect increases proportionally to the second power of the heating intensity. This increase saturates if the heating becomes too intense. Drag reduction decreases as &alpha;<sup>4</sup> when the heating wavenumber becomes too small, and as &alpha;<sup>-7</sup> when the heating wavenumber becomes too large; this decrease is due to the reduction in the magnitude of the Reynolds stress. The drag reduction can reach up to 87% for the heating intensities of interest and heating patterns corresponding to the most effective heating wavenumber.</p>
+                <p>Under construction.</p>
         </div>
     </div>
     
