--- a/publications/floryan2020distributed.html
+++ b/publications/floryan2020distributed.html
@@ -51,7 +51,7 @@
       <div class="col-md-6 work-detail-margin detail-contentbox">
         <div class="detail-content">
           <h4>Distributed flexibility in inertial swimmers</h4>
-          <p>D. Floryan and C. W. Rowley, under review</p>
+          <p>D. Floryan and C. W. Rowley, to appear in Journal of Fluid Mechanics</p>
           <p>arXiv: <a href="https://arxiv.org/abs/1909.05133">1909.05133</a></p>
         </div>
       </div>
