--- a/publications/goza2020connections.html
+++ b/publications/goza2020connections.html
@@ -51,7 +51,7 @@
       <div class="col-md-6 work-detail-margin detail-contentbox">
         <div class="detail-content">
           <h4>Connections between resonance and nonlinearity in swimming performance of a flexible heaving plate</h4>
-          <p>A. Goza, D. Floryan, and C. W. Rowley, under review</p>
+          <p>A. Goza, D. Floryan, and C. W. Rowley, to appear in Journal of Fluid Mechanics</p>
           <p>arXiv: <a href="https://arxiv.org/abs/1908.05704">1908.05704</a></p>
         </div>
       </div>
