--- a/locomotion.html
+++ b/locomotion.html
@@ -213,7 +213,7 @@ span { color: #33b988; }
         <div class="fix-12-12 flex ">
             <p>Nature's swimmers have benefitted from over 500 million years of evolution to become fast, efficient, maneuverable, and stealthy. Through evolutionary pressure, swimmers have converged on a common set of features and behaviours entirely different from traditional human-made swimming machines. What secrets do they hold?</p>
         
-        <p>We use theory, experiments, and computations to work towards answering two questions: (1) What are the underlying physical mechanisms that have led nature's swimmers to converge on their observed features and behaviours? (2) How can we leverage the underlying physical mechanisms to engineer human-made swimmers that not only match, but outperform nature's swimmers? The second question points at an underappreciated fact: evolution has not necessarily optimized swimmmers for swimming ability, and there is surely much room to engineer even better swimmers.</p>
+        <p>We use theory, experiments, and computations to work towards answering two questions: (1) What are the underlying physical mechanisms that have led nature's swimmers to converge on their observed features and behaviours? (2) How can we leverage the underlying physical mechanisms to engineer human-made swimmers that not only match, but outperform nature's swimmers? The second question points at an underappreciated fact: evolution has not necessarily optimized swimmers for swimming ability, and there is surely much room to engineer even better swimmers.</p>
 
         </div>
         
