--- a/publications.html
+++ b/publications.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <base href="./">
-    <title>Publications - Daniel Floryan</title>
-    <meta property="og:title" content="Publications - Daniel Floryan" />
-    <meta name="twitter:title" content="Publications - Daniel Floryan" />
+    <title>Publications - Flo Lab</title>
+    <meta property="og:title" content="Publications - Flo Lab" />
+    <meta name="twitter:title" content="Publications - Flo Lab" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <!-- Compressed Styles -->
     <link href="css/slides.min.css?51351" rel="stylesheet" type="text/css">
@@ -45,6 +45,25 @@
 
 <body class="slides chain simplifiedMobile noPreload">
 <svg id="customSvgLibrary" xmlns="http://www.w3.org/2000/svg" style="display:none" id="customSvgLibrary">
+  
+  <symbol id="mylogo" viewBox="0 0 20 20"><g
+    transform="translate(-136.2281,-93.681503)">
+   <g>
+     <path
+        d="m 142.30071,95.056577 -0.13436,1.100705 h -2.75951 l -0.25322,2.056715 h 2.75952 l -0.12403,1.02319 h -2.76468 l -0.46508,3.798203 h -1.18339 l 0.98702,-7.978813 z"/>
+     <path
+        d="m 144.76567,95.056577 -0.84233,6.878113 h 2.25826 l -0.13436,1.1007 h -3.44164 l 0.98185,-7.978813 z"/>
+     <path
+        d="m 155.08025,98.890956 q 0,1.364254 -0.72347,2.475294 -0.57361,0.87333 -1.49861,1.34875 -0.92501,0.47542 -2.04638,0.47542 -1.79317,0 -2.92488,-1.14204 -1.13171,-1.14722 -1.13171,-2.966222 0,-1.813837 1.19889,-2.997223 1.20406,-1.188554 3.03857,-1.188554 1.8345,0 2.96105,1.100704 1.12654,1.095537 1.12654,2.893871 z m -1.18856,-0.01033 q 0,-1.30741 -0.77514,-2.092889 -0.77514,-0.780312 -2.08255,-0.780312 -1.31258,0 -2.20658,0.878497 -0.88366,0.878496 -0.88366,2.196241 0,1.302242 0.82165,2.154902 0.82165,0.84749 2.07738,0.84749 1.30741,0 2.17558,-0.91467 0.87332,-0.90434 0.87332,-2.289259 z"/>
+   </g>
+     <path
+        d="m 139.70398,104.48784 -0.84232,6.87812 h 2.25825 l -0.13436,1.1007 h -3.44164 l 0.98185,-7.97882 z"/>
+     <path
+        d="m 144.0267,110.59081 -0.97151,1.87585 h -1.28674 l 4.41315,-8.54726 2.75435,8.54726 h -1.23507 l -0.57877,-1.87585 z m 0.5116,-1.02319 h 2.25308 l -0.85782,-2.83703 z"/>
+     <path
+        d="m 150.86605,104.48784 h 1.47795 q 0.69763,0 1.13171,0.14986 0.42374,0.14987 0.7183,0.50643 0.47025,0.56327 0.47025,1.35909 0,1.20922 -1.16272,1.84484 1.41077,0.3514 1.41077,1.76733 0,0.58394 -0.24805,1.1007 -0.23771,0.5116 -0.67179,0.82682 -0.34623,0.25322 -0.75964,0.3359 -0.21704,0.0413 -0.52193,0.0672 -0.30489,0.0207 -0.72347,0.0207 h -2.10322 z m 1.04387,1.10071 -0.28939,2.38744 h 0.33589 q 1.51929,0 1.51929,-1.41593 0,-0.97151 -1.15755,-0.97151 z m -0.40825,3.33312 -0.29972,2.44429 h 0.79582 q 0.88883,0 1.21956,-0.22221 0.50642,-0.3359 0.50642,-1.11621 0,-0.29456 -0.0879,-0.50126 -0.0827,-0.21187 -0.26355,-0.34623 -0.18086,-0.13436 -0.47025,-0.19637 -0.28422,-0.062 -0.68729,-0.062 z"/>
+   </g>
+ </g></symbol>
   
   <symbol id="logo" viewBox="0 0 106 31"><title>Slides Framework</title><path d="M17.413 14.04c-.56-5.84-5.6-7-8.52-7-4.6 0-8.6 2.92-8.6 7.52 0 3 2.4 4.88 5.28 5.8 4.24 1.64 5.88 1.84 5.88 3.36 0 1.08-1.2 1.72-2.32 1.72-.28 0-2.24 0-2.52-2.04h-6.6c.6 5.84 5.68 7.36 9.04 7.36 4.92 0 9.04-2.88 9.04-7.76 0-4.8-4-5.92-7.76-6.96-1.76-.52-3.4-1.2-3.4-2.2 0-.6.48-1.48 1.88-1.48 1.96 0 2.04 1.2 2.08 1.68h6.52zm2.222 15.96h6.64v-29.6h-6.64v29.6zm9.662-24.56h6.64v-5.04h-6.64v5.04zm0 24.56h6.64v-22.2h-6.64v22.2zm32.782-29.6h-6.64v9.28c-.72-.72-2.6-2.64-6.52-2.64-5.64 0-11 4.28-11 11.8 0 6.68 4.4 11.88 11.12 11.88 4.48 0 6.08-2.2 6.72-3.12v2.4h6.32v-29.6zm-17.52 18.4c0-2.56 1.8-5.56 5.64-5.56 1.56 0 2.96.56 3.96 1.56 1 .96 1.64 2.32 1.64 3.92.08 1.64-.52 3.08-1.56 4.12s-2.52 1.68-4.12 1.68c-3.12 0-5.56-2.28-5.56-5.68v-.04zm42.502 2.4c.52-4.08-.32-7.64-3.12-10.64-2.08-2.2-5-3.52-8.4-3.52-6.76 0-11.64 5.72-11.64 11.92 0 6.6 5.4 11.76 11.76 11.76 2.28 0 4.48-.68 6.32-2 1.88-1.28 3.44-3.2 4.52-5.68h-6.8c-.8 1.16-1.92 2.08-4.04 2.08-2.6 0-4.84-1.56-5.12-3.92h16.52zm-16.44-5.04c.16-1.04 1.52-3.52 4.96-3.52s4.8 2.48 4.96 3.52h-9.92zm34.502-2.12c-.56-5.84-5.6-7-8.52-7-4.6 0-8.6 2.92-8.6 7.52 0 3 2.4 4.88 5.28 5.8 4.24 1.64 5.88 1.84 5.88 3.36 0 1.08-1.2 1.72-2.32 1.72-.28 0-2.24 0-2.52-2.04h-6.6c.6 5.84 5.68 7.36 9.04 7.36 4.92 0 9.04-2.88 9.04-7.76 0-4.8-4-5.92-7.76-6.96-1.76-.52-3.4-1.2-3.4-2.2 0-.6.48-1.48 1.88-1.48 1.96 0 2.04 1.2 2.08 1.68h6.52z"/></symbol>
   
@@ -119,7 +138,7 @@
 </nav><!-- Panel Top #02 -->
 <nav class="panel top forceMobileView">
   <div class="sections">
-    <div class="left large" style="font-size:x-large"><a href="index.html">Daniel Floryan</a></div>
+    <div class="left large" style="font-size:x-large"><a href="index.html"><b>FLO LAB</b></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger transparent" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -162,7 +181,7 @@
   }
 .ul {
   list-style: disc;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: 10px;
 }
 ul li.extra{
