Add student; make other small changes

--- a/complex.html
+++ b/complex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <base href="./">
-    <title>Learning structure in complex systems - Flo Lab</title>
+    <title>Learning structure in complex systems | Flo Lab</title>
     <meta property="og:title" content="Learning structure in complex systems - Flo Lab" />
     <meta name="twitter:title" content="Learning structure in complex systems - Flo Lab" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
