--- a/locomotion.html
+++ b/locomotion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <base href="./">
-    <title>Bio-inspired locomotion - Flo Lab</title>
+    <title>Bio-inspired locomotion | Flo Lab</title>
     <meta property="og:title" content="Bio-inspired locomotion - Flo Lab" />
     <meta name="twitter:title" content="Bio-inspired locomotion - Flo Lab" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
