--- a/people.html
+++ b/people.html
@@ -15,7 +15,7 @@
     
     <!-- Fonts and Material Icons -->
     <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Material+Icons&display=swap"/>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <style>
         .slides { font-family: 'Inter', sans-serif; }
         .slides { font-family: 'Source Sans Pro', sans-serif; }
@@ -260,8 +260,8 @@ span { color: #33b988; }
               <br>
             </li>
             <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
-              <p><b>Daniel Floryan</b><br>
-              Kalsi Assistant Professor of Mechanical Engineering, University of Houston</p>
+              <h6>Daniel Floryan</h6>
+              <p>Kalsi Assistant Professor of Mechanical Engineering, University of Houston</p>
               <p>BS in Mechanical Engineering, Cornell University (2014)<br>
               BA in Economics, Cornell University (2014)<br>
               PhD in Mechanical and Aerospace Engineering, Princeton University (2019)</p>
@@ -275,8 +275,8 @@ span { color: #33b988; }
               <br>
             </li>
             <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
-              <p><b>Abdur Rehman</b><br>
-              PhD student (2022&ndash;present)</p>
+              <h6>Abdur Rehman</h6>
+              <p>PhD student (2022&ndash;present)</p>
               <p>BS in Aerospace Engineering, Institute of Space Technology (2015)<br>
               MS in Mechanical Engineering, National University of Sciences and Technology (2020)</p>
               <p>Email: <a id="mail" href="mailto:arehman12@uh.edu">arehman12@uh.edu</a></p>
