--- a/people.html
+++ b/people.html
@@ -228,7 +228,7 @@ span { color: #33b988; }
   position: relative;
   width: 100%;
   aspect-ratio: 1 / 1;
-  background: #5b6d92;
+  /*background: #5b6d92;*/
   -webkit-clip-path: circle(50%);
   clip-path: circle(50%);
 }
@@ -280,6 +280,20 @@ span { color: #33b988; }
               <p>BS in Aerospace Engineering, Institute of Space Technology (2015)<br>
               MS in Mechanical Engineering, National University of Sciences and Technology (2020)</p>
               <p>Email: <a id="mail" href="mailto:arehman12@uh.edu">arehman12@uh.edu</a></p>
+            </li>
+
+            <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
+              <div class="poligon">
+                <img src="assets/img/fsotoudeh.png">
+              </div>
+              <br>
+            </li>
+            <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
+              <h6>Freshteh Sotoudeh</h6>
+              <p>PhD student (2022&ndash;present)</p>
+              <p>BS in Aerospace Engineering, Azad University of Najaf Abad (2015)<br>
+              MS in Aerospace Engineering, Shiraz University (2019)</p>
+              <p><a href="https://scholar.google.com/citations?user=_sfOQfsAAAAJ">Google Scholar</a><br>Email: <a id="mail" href="mailto:fsotoudeh@uh.edu">fsotoudeh@uh.edu</a></p>
             </li>
             
             <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
