--- a/complex.html
+++ b/complex.html
@@ -267,7 +267,11 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
-                  <li class="ul">D. Floryan and M. D. Graham, <a href="https://arxiv.org/abs/2009.00682"><b>Discovering multiscale and self-similar structure with data-driven wavelets</b></a>, <b>Proceedings of the National Academy of Sciences</b> (2021), 118(1), e2021299118</li>
+                  <li class="ul">D. Floryan, <a href="https://arxiv.org/abs/2212.09998"><b>A fundamental limit on energy savings in controlled channel flow</b></a>, <b>Journal of Fluid Mechanics Rapids</b>, in press</li>
+
+                  <li class="ul">D. Floryan and M. D. Graham, <a href="https://rdcu.be/c1f5s"><b>Data-driven discovery of intrinsic dynamics</b></a>, <b>Nature Machine Intelligence</b> (2022), 4(12), 1113&ndash;1120 <br><span><i>Journal cover</i></span></li>
+
+                  <li class="ul">D. Floryan and M. D. Graham, <a href="./publications/floryan2021discovering.pdf"><b>Discovering multiscale and self-similar structure with data-driven wavelets</b></a>, <b>Proceedings of the National Academy of Sciences</b> (2021), 118(1), e2021299118</li>
                   
                   <li class="ul">M. D. Graham and D. Floryan, <a href="http://www.annualreviews.org/eprint/5VNFRHZSXWBUCNPICWXY/full/10.1146/annurev-fluid-051820-020223"><b>Exact coherent states and the nonlinear dynamics of wall-bounded turbulent flows</b></a>, <b>Annual Review of Fluid Mechanics</b> (2021), 53, 227&ndash;253 <br><span><i>Invited</i></span></li>
                            
