--- a/complex.html
+++ b/complex.html
@@ -267,7 +267,7 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
-                  <li class="ul">D. Floryan, <a href="https://arxiv.org/abs/2212.09998"><b>A fundamental limit on energy savings in controlled channel flow</b></a>, <b>Journal of Fluid Mechanics Rapids</b>, in press</li>
+                  <li class="ul">D. Floryan, <a href="./publications/floryan2023fundamental.pdf"><b>A fundamental limit on energy savings in controlled channel flow, and how to beat it</b></a>, <b>Journal of Fluid Mechanics</b> (2023), 954, R3</li>
 
                   <li class="ul">D. Floryan and M. D. Graham, <a href="https://rdcu.be/c1f5s"><b>Data-driven discovery of intrinsic dynamics</b></a>, <b>Nature Machine Intelligence</b> (2022), 4(12), 1113&ndash;1120 <br><span><i>Journal cover</i></span></li>
 
