--- a/publications.html
+++ b/publications.html
@@ -244,9 +244,9 @@ span { color: #33b988; }
           <ul class="flex fixedSpaces">
             <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
               <div class="container">
-                  <a href="https://arxiv.org/abs/2212.09998"><img src="publications/images/floryan2023fundamental.png" alt="Avatar" class="image" style="width:100%"></a>
+                  <a href="./publications/floryan2023fundamental.pdf"><img src="publications/images/floryan2023fundamental.png" alt="Avatar" class="image" style="width:100%"></a>
                 <div class="middle">
-                  <div class="text"><a style="color:#000000; text-decoration:none" href="https://arxiv.org/abs/2212.09998">A fundamental limit on energy savings in controlled channel flow, and how to beat it</a></div>
+                  <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/floryan2023fundamental.pdf">A fundamental limit on energy savings in controlled channel flow, and how to beat it</a></div>
                 </div>
                 </div>
             </li>
@@ -365,7 +365,7 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
-                  <li class="ul"><a href="https://arxiv.org/abs/2212.09998">[PDF]</a> D. Floryan, A fundamental limit on energy savings in controlled channel flow, <b>Journal of Fluid Mechanics Rapids</b>, in press</li>
+                  <li class="ul"><a href="./publications/floryan2023fundamental.pdf">[PDF]</a> D. Floryan, A fundamental limit on energy savings in controlled channel flow, and how to beat it, <b>Journal of Fluid Mechanics</b> (2023), 954, R3. <a href="https://doi.org/10.1017/jfm.2022.1059">DOI: https://doi.org/10.1017/jfm.2022.1059</a></li>
                   
                   <li class="ul"><a href="https://rdcu.be/c1f5s">[PDF]</a> D. Floryan and M. D. Graham, Data-driven discovery of intrinsic dynamics, <b>Nature Machine Intelligence</b> (2022), 4(12), 1113&ndash;1120. <a href="https://doi.org/10.1038/s42256-022-00575-4">DOI: 10.1038/s42256-022-00575-4</a> <br><span><b><i>Journal cover</i></b></span> <img src="publications/images/floryan2022dataCover.png" alt="Avatar" class="image" style="width:25%"></li>
 
