--- a/locomotion.html
+++ b/locomotion.html
@@ -268,6 +268,8 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
+                  <li class="ul">D. Yudin, D. Floryan, and T. Van Buren, <a href="./publications/yudin2023propulsive.pdf"><b>Propulsive performance of oscillating plates with time-periodic flexibility</b></a>, <b>Journal of Fluid Mechanics</b> (2023), 959, A31</li>
+
                   <li class="ul">D. Floryan, T. Van Buren, and A. J. Smits, <a href="./publications/floryan2020swimmers.pdf"><b>Swimmers' wake structures are not reliable indicators of swimming performance</b></a>, <b>Bioinspiration and Biomimetics</b> (2020), 15(2), 024001</li>
                   
                   <li class="ul">D. Floryan and C. W. Rowley, <a href="./publications/floryan2020distributed.pdf"><b>Distributed flexibility in inertial swimmers</b></a>, <b>Journal of Fluid Mechanics</b> (2020), 888, A24</li>
