Update students and publications

--- a/complex.html
+++ b/complex.html
@@ -267,6 +267,8 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
+                  <li class="ul">A. Guo, D. Floryan, and M. D. Graham, <a href="./publications/guo2023self.pdf"><b>Self-similar, spatially localized structures in turbulent pipe flow from a data-driven wavelet decomposition</b></a>, <b>Journal of Fluid Mechanics</b> (2023), 971, A9</li>
+
                   <li class="ul">D. Floryan, <a href="./publications/floryan2023fundamental.pdf"><b>A fundamental limit on energy savings in controlled channel flow, and how to beat it</b></a>, <b>Journal of Fluid Mechanics</b> (2023), 954, R3</li>
 
                   <li class="ul">D. Floryan and M. D. Graham, <a href="https://rdcu.be/c1f5s"><b>Data-driven discovery of intrinsic dynamics</b></a>, <b>Nature Machine Intelligence</b> (2022), 4(12), 1113&ndash;1120 <br><span><i>Journal cover</i></span></li>
