--- a/people.html
+++ b/people.html
@@ -295,6 +295,33 @@ span { color: #33b988; }
               MS in Aerospace Engineering, Shiraz University (2019)</p>
               <p><a href="https://scholar.google.com/citations?user=_sfOQfsAAAAJ">Google Scholar</a><br>Email: <a id="mail" href="mailto:fsotoudeh@uh.edu">fsotoudeh@uh.edu</a></p>
             </li>
+
+            <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
+              <div class="poligon">
+                <img src="assets/img/lmangalath.png">
+              </div>
+              <br>
+            </li>
+            <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
+              <h6>Leo Mangalath</h6>
+              <p>PhD student (2023&ndash;present)</p>
+              <p>BS in Mechanical Engineering, University of Applied Sciences Technikum Wien (2020)<br>
+              MS in Mechanical Engineering, University of Applied Sciences Technikum Wien (2022)</p>
+              <p>Email: <a id="mail" href="mailto:lmangalath@uh.edu">lmangalath@uh.edu</a></p>
+            </li>
+
+            <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
+              <div class="poligon">
+                <img src="assets/img/mnmabrouk.png">
+              </div>
+              <br>
+            </li>
+            <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
+              <h6>Mohamed Niged Mabrouk</h6>
+              <p>PhD student (2023&ndash;present)</p>
+              <p>Bachelor of Polytechnic Engineering, Ecole Polytechnique de Tunisie (2023)</p>
+              <p>Email: <a id="mail" href="mailto:mmabrouk@uh.edu">mmabrouk@uh.edu</a></p>
+            </li>
             
             <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
               <img src="publications/images/construction.jpg" alt="Avatar" class="image" style="width:100%"><br>
