Update group members

--- a/people.html
+++ b/people.html
@@ -284,20 +284,6 @@ span { color: #33b988; }
 
             <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
               <div class="poligon">
-                <img src="assets/img/fsotoudeh.png">
-              </div>
-              <br>
-            </li>
-            <li class="col-9-12 col-tablet-3-4 col-phablet-1-2">
-              <h6>Freshteh Sotoudeh</h6>
-              <p>PhD student (2022&ndash;present)</p>
-              <p>BS in Aerospace Engineering, Azad University of Najaf Abad (2015)<br>
-              MS in Aerospace Engineering, Shiraz University (2019)</p>
-              <p><a href="https://scholar.google.com/citations?user=_sfOQfsAAAAJ">Google Scholar</a><br>Email: <a id="mail" href="mailto:fsotoudeh@uh.edu">fsotoudeh@uh.edu</a></p>
-            </li>
-
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-2">
-              <div class="poligon">
                 <img src="assets/img/lmangalath.png">
               </div>
               <br>
@@ -332,6 +318,11 @@ span { color: #33b988; }
             
           </ul>
         </div>
+
+        <h4>Alumni</h4>
+        <ul>
+          <li class="ul">Freshteh Sotoudeh, M.S., 2023. Next position: Ph.D. student at UT Austin.</li>
+        </ul>
         
       </div>
     </div>
