--- a/locomotion.html
+++ b/locomotion.html
@@ -268,6 +268,10 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
+                  <li class="ul">M. N. Mabrouk and D. Floryan, <a href="./publications/mabrouk2025group.pdf"><b>Group cohesion and passive dynamics of a pair of inertial swimmers with three-dimensional hydrodynamic interactions</b></a>, <b>Bioinspiration and Biomimetics</b> (2025), 20(1), 016014</li>  
+
+                  <li class="ul">D. Yudin, D. Floryan, and T. Van Buren, <a href="./publications/yudin2024generating.pdf"><b>Generating maneuvering forces with oscillating propulsors</b></a>, <b>AIAA Paper</b> 2024-1557</li>
+                
                   <li class="ul">D. Yudin, D. Floryan, and T. Van Buren, <a href="./publications/yudin2023propulsive.pdf"><b>Propulsive performance of oscillating plates with time-periodic flexibility</b></a>, <b>Journal of Fluid Mechanics</b> (2023), 959, A31</li>
 
                   <li class="ul">D. Floryan, T. Van Buren, and A. J. Smits, <a href="./publications/floryan2020swimmers.pdf"><b>Swimmers' wake structures are not reliable indicators of swimming performance</b></a>, <b>Bioinspiration and Biomimetics</b> (2020), 15(2), 024001</li>
