--- a/publications.html
+++ b/publications.html
@@ -244,6 +244,22 @@ span { color: #33b988; }
           <ul class="flex fixedSpaces">
             <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
               <div class="container">
+                  <a href="./publications/mabrouk2025group.pdf"><img src="publications/images/mabrouk2025group.png" alt="Avatar" class="image" style="width:100%"></a>
+                <div class="middle">
+                  <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/mabrouk2025group.pdf">Group cohesion and passive dynamics of a pair of inertial swimmers with three-dimensional hydrodynamic interactions</a></div>
+                </div>
+                </div>
+            </li>
+            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
+              <div class="container">
+                  <a href="./publications/yudin2024generating.pdf"><img src="publications/images/yudin2024generating.png" alt="Avatar" class="image" style="width:100%"></a>
+                <div class="middle">
+                  <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/yudin2024generating.pdf">Generating maneuvering forces with oscillating propulsors</a></div>
+                </div>
+                </div>
+            </li>
+            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
+              <div class="container">
                   <a href="./publications/guo2023self.pdf"><img src="publications/images/guo2023self.png" alt="Avatar" class="image" style="width:100%"></a>
                 <div class="middle">
                   <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/guo2023self.pdf">Self-similar, spatially localized structures in turbulent pipe flow from a data-driven wavelet decomposition</a></div>
@@ -290,22 +306,6 @@ span { color: #33b988; }
                     </div>
                     </div>
               </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
-                <div class="container">
-                    <a href="./publications/van2020turbulent.pdf"><img src="publications/images/van2020turbulent.png" alt="Avatar" class="image" style="width:100%"></a>
-                  <div class="middle">
-                    <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/van2020turbulent.pdf">Turbulent pipe flow response to a step change in surface roughness</a></div>
-                  </div>
-                  </div>
-            </li>
-            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2">
-                <div class="container">
-                    <a href="./publications/floryan2020distributed.pdf"><img src="publications/images/floryan2020distributed.png" alt="Avatar" class="image" style="width:100%"></a>
-                  <div class="middle">
-                    <div class="text"><a style="color:#000000; text-decoration:none" href="./publications/floryan2020distributed.pdf">Distributed flexibility in inertial swimmers</a></div>
-                  </div>
-                  </div>
-            </li>
           </ul>
         </div>
     
@@ -361,6 +361,10 @@ span { color: #33b988; }
             </li>
             <li class="col-9-12 col-tablet-2-3 col-phablet-1-1">
               <ul>
+                  <li class="ul"><a href="./publications/mabrouk2025group.pdf">[PDF]</a> M. N. Mabrouk and D. Floryan, Group cohesion and passive dynamics of a pair of inertial swimmers with three-dimensional hydrodynamic interactions, <b>Bioinspiration and Biomimetics</b> (2025), 20(1), 016014. <a href="https://doi.org/10.1088/1748-3190/ad936d">DOI: https://doi.org/10.1088/1748-3190/ad936d</a></li>
+
+                  <li class="ul"><a href="./publications/yudin2024generating.pdf">[PDF]</a> D. Yudin, D. Floryan, and T. Van Buren, Generating maneuvering forces with oscillating propulsors, <b>AIAA Paper</b> 2024-1557. <a href="https://doi.org/10.2514/6.2024-1557">DOI: https://doi.org/10.2514/6.2024-1557</a></li>
+
                   <li class="ul"><a href="./publications/guo2023self.pdf">[PDF]</a> A. Guo, D. Floryan, and M. D. Graham, Self-similar, spatially localized structures in turbulent pipe flow from a data-driven wavelet decomposition, <b>Journal of Fluid Mechanics</b> (2023), 971, A9. <a href="https://doi.org/10.1017/jfm.2023.639">DOI: https://doi.org/10.1017/jfm.2023.639</a></li>
 
                   <li class="ul"><a href="./publications/yudin2023propulsive.pdf">[PDF]</a> D. Yudin, D. Floryan, and T. Van Buren, Propulsive performance of oscillating plates with time-periodic flexibility, <b>Journal of Fluid Mechanics</b> (2023), 959, A31. <a href="https://doi.org/10.1017/jfm.2023.166">DOI: https://doi.org/10.1017/jfm.2023.166</a></li>
